samples/_failures_safe/1761321958_4d3aca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dd4091c.c: In function ‘main’:
./samples/SAFE/__tmp_4dd4091c.c:153:5: error: expected declaration or statement at end of input
  153 |     size_t num_events = sizeof(events) / sizeof(events[0]);
      |     ^~~~~~
